--- a/ExpenseTracker-UI/src/app/navbar/navbar.component.html
+++ b/ExpenseTracker-UI/src/app/navbar/navbar.component.html
@@ -1,33 +1,110 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid p-3">
-      <div class="navbar-brand" href="#">Wallet</div>
-      <div class="me-2">by dave</div>
-      <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/home">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/accounts">Accounts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/records">Records</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Analytics</a>
-          </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary-subtle">
+  <div class="container-fluid px-3">
+    <button class="btn navbar-link fs-3 fw-normal" routerLink="/home">Wallet</button>
+    <div class="me-2 fw-light pt-4">by dave</div>
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item">
+        <a class="nav-link fw-bold" routerLink="/home">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link fw-bold" routerLink="/accounts">Accounts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link fw-bold" routerLink="/records">Records</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link fw-bold" routerLink="/analytics">Analytics</a>
+      </li>
+    </ul>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto me-2">
+        <li class="nav-item">
+          <button type="button" class="btn btn-primary btn-round btn-dark" data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop" (click)="modalRecord()">
+            + Record
+          </button>
+        </li>
+        <li class="nav-item">
+          <div class="mx-2 nav-link fw-bolder text-uppercase">{{currentUser.name}}</div>
+        </li>
+        <li class="nav-item">
+          <button type="button" class="nav-link" (click)="logout()">Log Out</button>
+        </li>
       </ul>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto me-2">
-          <li class="nav-item">
-            <button type="button" class="btn btn-primary btn-round rounded-circle">+ Record</button>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">User</a>
-          </li>
-          <li class="nav-item">
-            <button type="button" class="nav-link" (click)="logout()" >Log Out</button>
-          </li>
-        </ul>
+    </div>
+
+
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark-subtle">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Add Record</h1>
+          </div>
+
+
+          <form [formGroup]="form" class="modal-content p-3 bg-dark-subtle">
+            <div class="d-flex">
+              <div class="form-group flex-1 w-50">
+                <label for="accountNameInput">Accounts</label>
+                <select class="form-select custom-select" formControlName="selectedAccount" id="accountNameInput">
+                  <option [value]="account.id" *ngFor="let account of accounts">{{ account.name }}</option>
+                </select>
+              </div>
+
+              <div class="form-group flex-1 ms-2 w-25">
+                <label for="recordValue">Amount</label>
+                <input type="number" class="form-control" formControlName="recordValue">
+              </div>
+
+              <div class="form-group ms-2 w-25">
+                <label for="type">Type</label>
+                <select class="form-select custom-select" formControlName="type" id="type">
+                  <option value="Expense">Expense</option>
+                  <option value="Income">Income</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="mt-4">
+              <label for="categoryDropdown" class="form-label">Select a Category</label>
+              <select class="form-select" id="categoryDropdown" formControlName="selectedCategory"
+                (change)="onCategoryChange()">
+                <option value="" disabled>Select a category</option>
+                <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+              </select>
+            </div>
+
+            <div class="mt-3">
+              <label for="subcategoryDropdown" class="form-label">Select a Subcategory</label>
+              <select class="form-select" id="subcategoryDropdown" formControlName="selectedSubcategory">
+                <option value="" disabled>Select a subcategory</option>
+                <option *ngFor="let subcategory of subcategories" [value]="subcategory.id">{{ subcategory.name }}
+                </option>
+              </select>
+            </div>
+
+            <div class="mt-3">
+              <label for="notes">Notes</label>
+              <input class="form-control" formControlName="notes" #note type="text">
+            </div>
+
+            <div class="mt-3">
+              <label for="datetime">Date Time</label>
+              <input class="form-control" formControlName="date" type="date" name="datetime" id="datetime">
+            </div>
+          </form>
+
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-dark" (click)="addRecord()" data-bs-dismiss="modal">Create
+              Record</button>
+          </div>
+        </div>
       </div>
     </div>
-  </nav>
+
+
+  </div>
+</nav>
