--- a/ExpenseTracker-UI/src/app/records-page/records-page.component.html
+++ b/ExpenseTracker-UI/src/app/records-page/records-page.component.html
@@ -1,10 +1,68 @@
 <app-navbar></app-navbar>
-<div class="d-flex">
-    <div class="w-25 mt-5 mb-5 ms-5 me-2 bg-light rounded">
-        <h3>Records</h3>
+<div class="d-flex bg-dark">
+    <div class="w-25 mh-100 mt-5 mb-5 ms-5 me-2 bg-dark-subtle rounded">
+        <div class="p-3 ps-4">
+            <h3>Records</h3>
+        </div>
+        <div class="px-3 ps-4 pb-2">
+            <h5>Accounts</h5>
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item mx-4 my-2 rounded bg-secondary-subtle" *ngFor="let account of accounts">
+                <input type="radio" [id]="'checkbox-' + account.id" [name]="'accountRadio'" (click)="selectAccount(account.id)">
+                <label class="ps-2 form-check-label fw-bold" [for]="'checkbox-' + account.id">
+                    {{ account.name }}
+                </label>
+            </li>
+        </ul>
     </div>
 
-    <div class="w-75 mt-5 mb-5 me-5 ms-2 bg-light rounded">
-        Records2
+    <div class="d-flex w-75 min-vh-100 mt-5 mb-5 me-5 ms-2 bg-dark-subtle rounded">
+        <div class="p-3 w-100">
+            <div class="fs-2 pt-5 mt-3 fw-normal text-center"*ngIf="selectedAccountId == null">
+                Select an account!
+            </div>
+            <div *ngIf="selectedAccountId!==null" >
+                <div class="fs-2 pt-5 mt-3 text-center fw-bolder" *ngIf="records.length === 0">
+                    No records, yet. Add one!
+                </div>
+                <div *ngIf="records.length !== 0">
+                    <ul class="list-group" *ngFor="let record of records">
+                        <div class="my-2">
+                            <li class="list-group-item">
+                                <div class="form-check">
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex">
+                                            <div class="fst-normal form-check-label p-2" for="flexCheckDefault">
+                                                {{record.subcategory.name}}
+                                            </div>
+                                            <div class="fw-bold form-check-label p-2" for="flexCheckDefault">
+                                                {{record.account.name}}
+                                            </div>
+                                            <div class="fw-normal form-check-label p-2" for="flexCheckDefault">
+                                                {{record.note}}
+                                            </div>
+                                            <div class="fw-light form-check-label p-2" for="flexCheckDefault">
+                                                added by {{record.user.name}}
+                                            </div>
+                                        </div>
+                                        <div class="d-flex">
+                                            <label class="fw-bolder form-check-label p-2"
+                                                [ngClass]="{'text-success': record.type === 'Income', 'text-danger': record.type === 'Expense'}"
+                                                for="flexCheckDefault">
+                                                {{record.value}} RON
+                                            </label>
+                                            <button type="button" class="btn btn-outline-danger ps-2 ms-2"
+                                                (click)="deleteRecord(record.id)">Delete</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
