--- a/ExpenseTracker-UI/src/app/register-page/register-page.component.html
+++ b/ExpenseTracker-UI/src/app/register-page/register-page.component.html
@@ -1,28 +1,30 @@
-<div class="d-flex h-100 justify-content-center align-items-center">
-    <form class="w-25 mw-400px mt-5 shadow p-3">
-        <h2 class="text-center">Register</h2>
-        <div class="form-group mb-3">
-            <label for="NameInput">Name</label>
-            <input class="form-control" id="NameInput" formControlName="Name" placeholder="Enter Name">
-        </div>
-        <div class="form-group mb-3">
-            <label for="emailInput">Email address</label>
-            <input type="email" class="form-control" id="emailInput" formControlName="email" placeholder="Enter email">
-        </div>
-        <div class="d-flex">
-            <div class="form-group flex-1 mb-3">
-                <label for="passInput">Password</label>
-                <input type="password" class="form-control" formControlName="password" id="passInput" placeholder="Password">
+<div class="min-vh-100 bg-dark">
+    <div class="d-flex h-100 justify-content-center align-items-center">
+        <form [formGroup]="form" class="w-25 mw-400px mt-5 shadow p-3 bg-dark-subtle rounded">
+            <h2 class="text-center">Register</h2>
+            <div class="form-group mb-3">
+                <label for="NameInput">Name</label>
+                <input class="form-control" id="NameInput" formControlName="name" placeholder="Enter Name">
             </div>
-            <div class="form-group flex-1 mb-3 ms-2">
-                <label for="confirmPassInput">Confirm Password</label>
-                <input type="password" class="form-control" formControlName="confirmPassword" id="confirmPassInput" placeholder="Confirm Password">
+            <div class="form-group mb-3">
+                <label for="emailInput">Email address</label>
+                <input type="email" class="form-control" id="emailInput" formControlName="email" placeholder="Enter email">
             </div>
-        </div>
-
-        <div class="mb-3 text-center">Already have an account? <a routerLink="/login">Login</a> instead</div>
-        <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-success">Register</button>
-        </div>
-    </form>
+            <div class="d-flex">
+                <div class="form-group flex-1 mb-3">
+                    <label for="passInput">Password</label>
+                    <input type="password" class="form-control" formControlName="password" id="passInput" placeholder="Password">
+                </div>
+                <div class="form-group flex-1 mb-3 ms-2">
+                    <label for="confirmPassInput">Confirm Password</label>
+                    <input type="password" class="form-control" formControlName="confirmPassword" id="confirmPassInput" placeholder="Confirm Password">
+                </div>
+            </div>
+    
+            <div class="mb-3 text-center">Already have an account? <a routerLink="/login">Login</a> instead</div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-outline-success" (click)="onSubmit()">Register</button>
+            </div>
+        </form>
+    </div>
 </div>
